# maxim-cookbooks

./: .gitignore  README.md
.github/workflows/: maxim-test-runs.yml
Agents/Crew AI Agent/: requirements.txt
Agents/Hybrid RAG/: hybrid_rag.ipynb
Agents/Python ReACT agent/: env.example
agents/LangGraph agent/: langraph_agent_manual_integration.ipynb
agents/Python ReACT agent/: python-agent.ipynb
agents/creaw-ai/: callback_tracer.py  maxim-log-example.ipynb
agents/crew-ai/: callback_tracer.py
agents/langgraph/: env.example  langraph_agent_quick_integration.ipynb
agents/langraph-agent/: env.example
agents/swarm-agent/: Swarm_agent.ipynb
python/: pyproject.toml
python/anthropic/: basic.py  rag+stream.py  rag.py  stream.py
python/grok/: basic.py  stream.py
python/langchain/: basic.py  rag+stream+tool.py  rag+stream.py  rag.py  rest.py  tool.py
python/langgraph/: main.py
python/llamaindex/: basic.py  rag+tools.py  rag.py  stream.py  tool.py
python/observability-online-eval/agno/: .gitignore  agent.ipynb  pyproject.toml
python/observability-online-eval/anthropic/: .env.example  basic.ipynb  pyproject.toml  stream.ipynb  stream.py  tool.py
python/observability-online-eval/attachments/: .env.example  manual_attachments.ipynb  pyproject.toml
python/observability-online-eval/attachments/files/: text_file.txt
python/observability-online-eval/azure/openai-sdk/: .env.example  evaluate-rag-with-llm-as-a-judge.ipynb  manual_tracing.ipynb  manual_tracing_for_streaming_responses.ipynb  pyproject.toml  single_line_integration.ipynb
python/observability-online-eval/bedrock/: .env.example  pyproject.toml  single-line-integration.ipynb
python/observability-online-eval/crew-ai/cooking-agent/: agent.py
python/observability-online-eval/crewAI/Cooking Agent/: agent.py  requirements.txt
python/observability-online-eval/customer-support-agent/: tracing-eval.ipynb
python/observability-online-eval/fireworks/: fireworks.ipynb
python/observability-online-eval/google-adk/: README.md
python/observability-online-eval/google-adk/financial-advisor/: README.md  pyproject.toml  run_with_maxim.py  setup_env.sh
python/observability-online-eval/google-adk/financial-advisor/financial_advisor/: __init__.py
python/observability-online-eval/google-adk/financial-advisor/tests/: test_agents.py
python/observability-online-eval/google/gemini/: .env.example  README.md  pyproject.toml  weather-app.py  weather.ipynb
python/observability-online-eval/groq/: .env.example  groq.ipynb
python/observability-online-eval/langchain/: .env.example  basic.ipynb  basic.py  chain.ipynb  decorators.ipynb  decorators.py  google-vertex.ipynb  mongo_rag.py  pyproject.toml  requirement.txt  stream-response.py  stream.ipynb
python/observability-online-eval/langgraph/: .env.example  main.py  pyproject.toml  requirements.txt  tavily-search-with-decorators.ipynb  tavily-search-without-decorators.ipynb  tavily-search.ipynb
python/observability-online-eval/langgraph/main.py/: README.md  index.html
python/observability-online-eval/langgraph/movie-search-engine/: .env.example  main.py  weaviate_connect.py
python/observability-online-eval/langgraph/movie-search-engine/data/: add_data.py
python/observability-online-eval/langgraph/multi-agent/: Multi_agent_LangGraph.ipynb  agent.py  mock_tracer.py
python/observability-online-eval/langgraph/tavily-search/: main.py
python/observability-online-eval/litellm/: litellm-one-line-integration.ipynb  pyproject.toml
python/observability-online-eval/litellm-proxy/: .env.example  Dockerfile  README.md  config.yml  docker-compose.yml  example.ipynb  maxim_proxy_tracer.py  pyproject.toml  requirements.txt
python/observability-online-eval/livekit/: .env.example  livekit-gemini.py  livekit-openai.py  pyproject.toml
python/observability-online-eval/llamaindex/: basic.py  llamaindex.ipynb  rag+stream.py  rag.py
python/observability-online-eval/manual-tracing/: main.ipynb  pyproject.toml
python/observability-online-eval/misc/: main.py  pyproject.toml
python/observability-online-eval/mistral/: .env.example  mistral.ipynb  pyproject.toml
python/observability-online-eval/openai/computer-use/: .env.example  agent.py  main.ipynb  pyproject.toml  requirements.txt
python/observability-online-eval/openai/openai-agents-sdk/: customer_service_agent.ipynb  handoff.ipynb  language_agent.ipynb  pyproject.toml
python/observability-online-eval/openai/openai-sdk/: .env.example  HP-evaluation-dataset.csv  HP_test_dataset.csv  basic.py  evaluate-rag-with-llm-as-a-judge.ipynb  manual.ipynb  one-line-integration.ipynb  pyproject.toml  stream.py
python/observability-online-eval/opentelemetry/: .env.example  opentelemetry_tracing.ipynb
python/observability-online-eval/pydantic-ai/: advanced_agent.ipynb  simple_agent.ipynb  streaming_agent.ipynb
python/observability-online-eval/smolagents/: example.py
python/observability-online-eval/together/: basic.py  example.ipynb  stream.py
python/openai/: basic.py  stream.py
python/prompt-management/: .env.example  main.py  proxy_prompts_via_maxim.ipynb  pyproject.toml  requirement.txt  retrieve_prompt_and_run.ipynb  retrieve_prompts_from_folder_and_run.ipynb
python/simulation/: simulation-workflow.md
python/test-runs/: .env.example  basic-with-prompt-version.ipynb  basic-with-prompt-version.py  basic.ipynb  basic.py  dspy-evaluators-local-workflow.ipynb  hosted-dataset-local-workflow.ipynb  hosted-dataset-local-workflow.py  local-dataset-local-workflow.ipynb  local-dataset-local-workflow.py  local-evaluators-local-workflow.ipynb  local-evaluators-local-workflow.py  local-evaluators.ipynb  local-evaluators.py  pyproject.toml
python/test-runs/using-hosted-dataset/: .env.example  main.py  requirement.txt
python/together/: basic.py  stream.py
typescript/react-native/: metro.config.js  package.json
typescript/test-runs/: .env.example  README.md  basic.ts  basicWithPromptVersion.ts  concurrencyConfiguration.ts  customLogger.ts  customOutputProcessing.ts  hostedDatasetLocalWorkflow.ts  package.json  (+2 more)
(+96 files in other folders)
