[project]
name = "maxim-test-runs"
version = "0.1.0"
requires-python = ">=3.9"
description = "Maxim AI cookbook for gemini."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
    "dspy>=2.6.16",
    "ipykernel>=6.29.5",
    "maxim-py==3.4.11",
    "python-dotenv>=1.0.1",
]
