[project]
name = "maxim-langchain-tracing"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
description = "Maxim AI cookbook for tracing lanchain."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
 "ipykernel>=6.29.5",
 "pip>=25.0.1",
 "python-dotenv>=1.0.1",
 "langchain==0.2.17",
 "langchain-openai==0.1.25",
 "langchain-community==0.2.17",
 "langchain-aws==0.1.18",
 "together>=1.4.6",
 "maxim-py==3.5.6",
]
