[project]
name = "maxim-langchain-tracing"
version = "0.1.0"
requires-python = ">=3.9.20"
description = "Maxim AI cookbook for tracing lanchain."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
 "ipykernel>=6.29.5",
 "pip>=25.0.1",
 "python-dotenv>=1.0.1",
 "together>=1.4.6",
 "langchain-core==0.2.17",
 "langchain-google-vertexai==1.0.4",
 "langchain-openai>=0.1.16",
 "langchain-community>=0.2.7",
 "google-cloud-aiplatform>=1.97.0",
 "maxim-py",
]

[tool.uv.sources]
maxim-py = { path = "../../../../maxim-py", editable = true }
