[project]
name = "maxim-langgraph-cookbook"
version = "0.1.0"
requires-python = ">=3.9"
description = "Maxim AI cookbook for gemini."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.22",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "maxim-py>=3.4.10",
    "python-dotenv>=1.0.1",
]
