[project]
name = "litellm-proxy"
version = "0.1.0"
description = "LiteLLM Proxy Server"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "litellm[proxy]>=1.30.0",
    "maxim-py==3.4.16",
    "python-dotenv>=0.21.1",
]

