[project]
name = "maxim-litellm-tracing"
version = "0.1.0"
requires-python = ">=3.9"
description = "Maxim AI cookbook for tracing litellm."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
 "ipykernel>=6.29.5",
 "litellm>=1.67.4.post1",
 "pip>=25.0.1",
 "python-dotenv>=1.0.1",
 "together>=1.4.6",
 "maxim-py>=3.9.6",
]
