[project]
name = "maxim-livekit-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "livekit>=0.1.0",
    "livekit-agents[openai]>=1.0.22",
    "livekit-api>=1.0.2",    
    "python-dotenv>=1.1.0",
]
