[project]
name = "maxim-gemini-cookbook"
version = "0.1.0"
requires-python = ">=3.12"
description = "Maxim AI cookbook for gemini."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
    "flask>=3.1.0",
    "google-genai>=1.0.0",
    "ipykernel>=6.29.5",
    "maxim-py==3.8.3",
    "python-dotenv>=1.0.1",
]
