[project]
name = "maxim-observability-openai"
version = "0.1.0"
requires-python = "==3.10.16"
description = "Maxim AI cookbook for gemini."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
    "maxim-py==3.4.11",
    "openai>=1.65.4",
    "python-dotenv>=1.0.1",
]
