[project]
name = "maxim-observability-openai"
version = "0.1.0"
requires-python = "==3.10.16"
description = "Maxim AI cookbook for gemini."
authors = [{ name = "Maxim Engineering", email = "eng@getmaxim.ai" }]
dependencies = [
    "agents>=1.4.0",
    "ipykernel>=6.29.5",
    "openai>=1.65.4",
    "openai-agents>=0.0.14",
    "python-dotenv>=1.0.1",
    "maxim-py==3.5.0"
]
